test/error/error.input069.zc
Unknown type:FLOO on line 2 of input069.zc
